<resources>
    <string name="app_name">My Reminder</string>
    <string name="LogTag">ReminderLog</string>
    
    <!-- Layout labels/hints -->
    <string name="reminder_title_hint">Reminder Title</string>
    <string name="reminder_occasion_hint">Occasion</string>
    <string name="reminder_date_hint">Date</string>
    <string name="reminder_time_hint">Time</string>
    <string name="reminder_delete_hint">Delete</string>

    <!-- Menu item titles -->
    <string name="action_save">Save</string>
    <string name="action_insert_dummy_data">Insert Dummy Data</string>
    <string name="action_delete_all_title">Delete All Entries</string>

    <!-- Input validation errors -->
    <string name="title_error">Please provide a title!</string>
    <string name="date_time_error">Date/Time should not be in past!</string>
    <string name="occasion_error">Invalid occasion selected!</string>

    <!-- Toast messages for actions taken -->
    <string name="dummy_reminders_added">Added dummy reminders.</string>
    <string name="reminder_deleted_all">Deleted all reminders!</string>
    <string name="reminder_added">Reminder added.</string>
    <string name="reminder_updated">Reminder updated.</string>
    <string name="reminder_deleted">Reminder deleted.</string>

    <!-- AlertDialog titles and messages -->
    <string name="delete_dialog_title">Delete Reminder?</string>
    <string name="delete_dialog_message">Are you sure you want to delete this reminder? This action can\'t be undone!</string>
    <string name="delete_all_dialog_title">Delete All Reminders?</string>
    <string name="delete_all_dialog_message">Are you sure you want to delete all reminders? This action can\'t be undone!</string>

    <!-- Date/Time formats -->
    <string name="date_format">EEE, d MMM, yyyy</string>
    <string name="time_format">hh:mm a</string>
    <string name="date_time_format">EEE, d MMM, yyyy hh:mm a</string>

    <!-- String/Int arrays for occasion spinner dropdown -->
    <string-array name="occasion_values">
        <item>Anniversary</item>
        <item>Birthday</item>
        <item>Other</item>
    </string-array>
    <array name="occasion_keys">
        <item>1</item>
        <item>2</item>
        <item>0</item>
    </array>

    <!-- Array of a default titles for dummy data generation -->
    <string-array name="dummy_reminders">
        <item>Jack\'s Birthday</item>
        <item>Johnny\'s Anniversary</item>
        <item>Adrian Vacation</item>
        <item>Ben\'s Birthday</item>
        <item>Jeremy Remote</item>
        <item>Gamer Friday</item>
        <item>New Year</item>
        <item>Diwali</item>
    </string-array>
</resources>